Adjust dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -8,12 +8,16 @@ copyright_holder = Rob Hoelz
 [GithubMeta]
 issues = 1
 [Git::Check]
+allow_dirty = dist.ini
 [Git::NextVersion]
 first_version = 0.01
 version_regexp = ^(\d+)\.(\d+)$
 [Git::Tag]
 tag_format  = %v
 tag_message = %v
+[Git::NextVersion]
+first_version = 0.01
+version_regexp = ^(\d\.\d+)$
 
 [GatherDir]
 [PruneCruft]
@@ -27,11 +31,14 @@ filename = weaver.ini
 [Manifest]
 [NextRelease]
 format=%v %{MMMM dd yyyy}d
+[Git::Commit]
+allow_dirty = dist.ini
 [PodCoverageTests]
 [PodSyntaxTests]
 [DistManifestTests]
 [KwaliteeTests]
 [CompileTests]
+[CriticTests]
 [TestRelease]
 [ConfirmRelease]
 [LocalBrew]
@@ -51,4 +58,3 @@ namespace::clean = 0
 Test::More = 0
 [PkgVersion]
 [PodWeaver]
-[Git::Commit]
